major bug fixes with entire website navigation, improvements on appointments

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/account-creation/create-patient-record.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/account-creation/create-patient-record.html
@@ -28,7 +28,7 @@
                     {% csrf_token %}
                     <br />
                     <div class="row" style="margin-left: 10%; margin-right: 10%">
-                    <h5>Name</h5>
+                    <h5>Account Username:</h5>
                     <br />
                     <input name='username'>
                     <br />
