--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
@@ -2,7 +2,7 @@
 {% block content %} {% load static %}
 
 <p style="background-color:hsla(198, 13%, 85%, 0.89); padding-left: 1%;">
-  {{ record.first_name|upper }},{{ record.last_name|upper }}  |  {{ record.age|upper }} | {{ record.gender|upper }} | {{ record.bday|upper }}
+  {{ record.first_name|upper }} {{ record.last_name|upper }}  |  ({{record.nick_name|upper}})  |  {{ record.age|upper }} | {{ record.gender|upper }} | {{ record.bday|upper }}
 </p>
 
 <div class="container-fluid">
@@ -122,7 +122,7 @@
                   </tr>
                 </table>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                  <a href="{% url 'update-patient-profile' %}">
+                  <a href="{% url 'update-patient-profile' record.pk %}">
                     <button class="btn btn-success" id="submit_button" type="submit">
                       <i class="fas fa-save"></i>
                       Update
