--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
@@ -1,12 +1,14 @@
 {% extends 'vaccinerecordapp/navbar.html' %} 
 {% block content %} {% load static %}
-
+<p style="background-color:hsla(198, 13%, 85%, 0.89); padding-left: 1%;">
+  {{ record.first_name|upper }},{{ record.last_name|upper }}  |  {{ record.age|upper }} | {{ record.gender|upper }} | {{ record.bday|upper }}
+</p>
     {% include 'vaccinerecordapp/patient-navbar.html' %}
 
     
     <br><br>
 
-    <form action="{% url 'update-patient-profile' %}" method="POST">
+    <form action="{% url 'update-patient-profile' record.pk %}" method="POST">
         <div class="modal-body" style="color: black">
             {% csrf_token %}
             {{form.doctor_assigned}}
