--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
@@ -58,13 +58,16 @@
 <div class="modal fade" id="appointment">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Schedule Appointment</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
         <form action="{% url 'appointment' record.pk %}" method="post">
             <div class="modal-body" style="color: black">
                 {% csrf_token %}
                 <div class="modal-body" style="color: black">
                         <div class="row" style="margin-left: 15%; margin-right: 15%">
                         </div>
-                        <br />
                         <br />
                         <div class="row" style="width: 50%; margin-left: 15%; margin-right: 15%">
                         <div class="col">Requested Appointment Date: {{form.date}}</div>
@@ -77,7 +80,7 @@
                         <div class="col">Reason for Visit: {{form.visit}}</div>
                     </div>
                 </div>
-                <div class="row" style="width: 50%; margin-left: 40%; margin-right: 40%">
+                <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button id="submit_button" type="submit" class="btn btn-primary">Set Appointment</button>
                 </div>
