--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/vaccine-certificate.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/vaccine-certificate.html
@@ -31,7 +31,7 @@
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <a class="btn btn-lg btn-info"  href="{% url 'home' %}" style="color: black">
                         Dr Sign</a>
-                    <a class="btn btn-lg btn-info"  href="#" style="color: black">
+                    <a class="btn btn-lg btn-info"  href="{% url 'generatepdf' record.id %}" style="color: black">
                         View / Print</a>
                   </div>
               </div>
