fixed output date-format, fixed search filter format(maliban sa date, di siya date picker), ung username din na pangconnect maayos na itsura

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/account-creation/create-patient-record.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/account-creation/create-patient-record.html
@@ -25,7 +25,7 @@
                 <table class="table table-bordered">
                   <tr>
                     <td class="table-warning" colspan="2">Account Username:</td>
-                    <td class="table-light"><input name='username'></td>
+                    <td class="table-light"><input class="form-control" placeholder="Username" name='username'></td>
                     <td class="table-warning" colspan="7"></td>
                   </tr>
                   <tr>
