--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-vaccine.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-vaccine.html
@@ -29,11 +29,7 @@
                 </div>
                 <br />
                     {% csrf_token %}
-                    <table class="table table-bordered">
-                        <tr>
-                            <td colspan="2">Account Username: {{form.user}}</td>
-                        </tr>
-                    </table>
+                        {{form.user}}
                         <table class="table table-striped table-hover">
                             <thead class="table table-info">
                                 <tr>
