--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/vaccine-record.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/vaccine-record.html
@@ -29,7 +29,7 @@
                     {% csrf_token %}
                         <table class="table table-bordered">
                             <tr>
-                                <td colspan="2">Account Username: <input name='username'></td>
+                                <td colspan="2">Account Username: <input class="form-control" placeholder="Username" name='username'></td>
                             </tr>
                         </table>
                         <table class="table table-striped table-hover">
